# ubuntu

./: .gitlab-ci.yml  README.md  docker-ubuntu.code-workspace
.build-scripts/: README.md  build.sh
.build-scripts/01-base/: eoan.sh  focal.sh  latest.sh
.gitlab-ci/: ansible.yml  base.yml  django.yml  puppet.yml  python.yml  ruby.yml
ansible/: .zshrc  Dockerfile
base/: .bash_aliases  .dockerignore  .ssh_config  .tmux.conf  .zshrc  Dockerfile  Dockerfile.focal  Dockerfile.jammy
base/.ssh/: config
boilerplate/ansible/: README.md  ansible.code-workspace
boilerplate/ansible/.devcontainer/: devcontainer.json
boilerplate/ansible/.devcontainer/docker/: Dockerfile
boilerplate/ansible/ansible/: ansible.cfg
boilerplate/django/: .gitignore  README.md  django.code-workspace  pyproject.toml
boilerplate/django/.devcontainer/: devcontainer.json  docker-compose.yaml
boilerplate/django/.devcontainer/code/: Dockerfile
boilerplate/django/.devcontainer/code/scripts/: create.sh
boilerplate/node/: README.md
boilerplate/node/.devcontainer/: devcontainer.json  docker-compose.yaml
boilerplate/node/.devcontainer/docker/: Dockerfile
boilerplate/pypy/: README.md  mypy.ini  pyproject.toml  pyproject.toml.example  pypy.code-workspace
boilerplate/pypy/.devcontainer/: devcontainer.json
boilerplate/pypy/.devcontainer/docker/: Dockerfile
boilerplate/pypy/.devcontainer/docker/scripts/: create.sh
boilerplate/python/: README.md  pyproject.toml  pyproject.toml.example  python.code-workspace
boilerplate/python/.devcontainer/: devcontainer.json  docker-compose.yaml
boilerplate/python/.devcontainer/docker/: Dockerfile  Dockerfile.pypy
boilerplate/python/.devcontainer/docker/scripts/: create.sh
boilerplate/ruby/: README.md  ruby.code-workspace
boilerplate/ruby/.devcontainer/: devcontainer.json
boilerplate/ruby/.devcontainer/docker/: Dockerfile
bullseye/: Dockerfile
bullseye/examples/supervisor-service/: Dockerfile  README.md
buster/: Dockerfile
buster/examples/supervisor-service/: Dockerfile  README.md
django/: Dockerfile
eoan/: Dockerfile
eoan/base/: Dockerfile
eoan/examples/supervisor-service/: Dockerfile  README.md
eoan/supervisor/: supervisord.conf
focal/: .dockerignore  Dockerfile  start.sh
focal/base/: Dockerfile  vimrc
focal/examples/supervisor-service/: Dockerfile  README.md  sshd.service
latest/base/: Dockerfile
puppet/: Dockerfile  puppet.sources
python/: .zshrc  Dockerfile
python/.devcontainer/: devcontainer.json  docker-compose.yaml
python/.devcontainer/docker/: Dockerfile
python/.devcontainer/docker/scripts/: create.sh
ruby/: Dockerfile
sid/: Dockerfile
sid/examples/supervisor-service/: Dockerfile  README.md
stretch/: Dockerfile  neovimrc
stretch/examples/supervisor-service/: Dockerfile  README.md
vscode/: .dockerignore  Dockerfile  README.md  bash_aliases
vscode/templates/ansible/: project.code-workspace
vscode/templates/ansible/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/ansible/.devcontainer/docker/: Dockerfile
vscode/templates/common/: .gitignore  .rubocop.yml  project.code-workspace
vscode/templates/common/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/common/.devcontainer/docker/: Dockerfile
vscode/templates/perl/: project.code-workspace
vscode/templates/perl/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/perl/.devcontainer/docker/: Dockerfile
vscode/templates/php/: project.code-workspace
vscode/templates/php/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/php/.devcontainer/docker/: Dockerfile
vscode/templates/python/: .gitignore  README.md
vscode/templates/python/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/python/.devcontainer/docker/: Dockerfile
vscode/templates/shell/: .gitignore  project.code-workspace
vscode/templates/shell/.devcontainer/: devcontainer.json  docker-compose.yaml
vscode/templates/shell/.devcontainer/docker/: Dockerfile
