[tool.poetry]
name = "My Django Package"
description = "Example Django Project"
authors = ["Me <me@example.com>"]
version = "1.0.0"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/example/example"

[tool.poetry.dependencies]
# Python version required
python = "^3.10"

# Django core
Django = "^4.1.6"

# Django requirements
asgiref = "^3.6.0"
pytz = "^2023.3"
sqlparse = "^0.4.3"
uritemplate = "^4.1.1"
whitenoise = "^6.3.0"

# Django common extensions
django-environ = "^0.10.0"
django-filter = "^23.1"
django-guardian = "^2.4.0"
django-netfields = "^1.3"

# Django Ninja for API support
django-ninja = "^0.21.0"

# Password hashers
argon2-cffi = "^21.3.0"
bcrypt = "^4.0.1"

# Django development tools
django-debug-toolbar = "^4.0.0"
django-extensions = "^3.2.1"
Faker = "^18.4.0"

# Postgres database driver
psycopg2-binary = "^2.9.4"

# Optional tools for Django
jsmin = "^3.0.1"
orjson = "^3.8.5"

# Web server
twisted = {extras = ["http2", "tls"], version = "^22.10.0"}
daphne = "^4.0.0"

# Optional requirements for development purposes in VS Code
autopep8 = {version = "^2.0.1", optional = true}
black = {version = "^23.1.0", optional = true}
Cython = {version = "^0.29.33", optional = true}
devtools = {extras = ["pygments"], version = "^0.11.0", optional = true}
flake8 = {version = "^6.0.0", optional = true}
ipython = {version = "^8.8.0", optional = true}
Markdown = {version = "^3.4.2", optional = true}
pipenv = {version = "^2023.2.18", optional = true}
pycodestyle = {version = "^2.10.0", optional = true}
Pygments = {version = "^2.14", optional = true}
pylint = {version = "^2.15.10", optional = true}
pylint-django = {version = "^2.5", optional = true}
rich = {version = "^13.3.3", optional = true}

# Optional requirements for type checking
mypy = {version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
colorama = "^0.4.5"
ipy = "^1.1"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-html = "^3.1.1"
pywatchman = "^1.4.1"
semgrep = "^1.16.0"

[tool.poetry.extras]
# Formatting and linting tools
formatting = [
  "autopep8",
  "black",
  "flake8",
  "pycodestyle",
  "pylint",
  "pylit-django",
]

# General tools to install in VS Code container
vscode = [
  "Cython",
  "devtools",
  "ipython",
  "Markdown",
  "pipenv",
  "Pygments",
  "rich",
]

# Typing tools
typing = [
  "mypy",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[flake8]
# Raise default maximum line length
max-line-length = 120

[tool.black]
exclude = "/example-project/.*/migrations/"

[tool.pylint.MASTER]
ignore = [
  "migrations"
]
load-plugins = [
  "pylint_django"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
  "consider-using-f-string"
]