[tool.poetry]
name = "My Django Package"
description = "Example Django Project"
authors = ["Me <me@example.com>"]
version = "1.0.0"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/example/example"

[tool.poetry.dependencies]
# Python version required
python = "^3.12"

# Django core
Django = "^5.0.1"

# Django requirements
asgiref = "^3.7.2"
pytz = "^2023.3"
sqlparse = "^0.4.4"
uritemplate = "^4.1.1"
whitenoise = "^6.6.0"

# Django common extensions
django-environ = "^0.11.2"
django-filter = "^23.5"
django-guardian = "^2.4.0"
django-netfields = "^1.3.2"

# Django Ninja for API support
django-ninja = "^1.1.0"

# Password hashers
argon2-cffi = "^23.1.0"
bcrypt = "^4.1.2"

# Django development tools
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
Faker = "^22.1.0"

# Postgres database driver
psycopg2-binary = "^2.9.9"

# Optional tools for Django
jsmin = "^3.0.1"
orjson = "^3.9.10"

# Web server
twisted = {extras = ["http2", "tls"], version = "^23.10.0"}
daphne = "^4.0.0"

# Optional requirements for development purposes in VS Code
autopep8 = {version = "^2.0.4", optional = true}
black = {version = "^23.12.1", optional = true}
Cython = {version = "^3.0.8", optional = true}
devtools = {extras = ["pygments"], version = "^0.12.2", optional = true}
flake8 = {version = "^7.0.0", optional = true}
ipython = {version = "^8.20.0", optional = true}
Markdown = {version = "^3.5.1", optional = true}
pipenv = {version = "^2023.11.15", optional = true}
pycodestyle = {version = "^2.11.0", optional = true}
Pygments = {version = "^2.17.2", optional = true}
pylint = {version = "^3.0.3", optional = true}
pylint-django = {version = "^2.5.5", optional = true}
rich = {version = "^13.7.0", optional = true}

# Optional requirements for type checking
mypy = {version = "^1.8.0", optional = true}

[tool.poetry.dev-dependencies]
colorama = "^0.4.6"
ipy = "^1.01"
pytest = "^7.4.4"
pytest-django = "^4.7.0"
pytest-html = "^4.1.1"
pywatchman = "^1.4.1"
semgrep = "^1.56.0"

[tool.poetry.extras]
# Formatting and linting tools
formatting = [
  "autopep8",
  "black",
  "flake8",
  "pycodestyle",
  "pylint",
  "pylit-django",
]

# General tools to install in VS Code container
vscode = [
  "Cython",
  "devtools",
  "ipython",
  "Markdown",
  "pipenv",
  "Pygments",
  "rich",
]

# Typing tools
typing = [
  "mypy",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[flake8]
# Raise default maximum line length
max-line-length = 120

[tool.black]
exclude = "/example-project/.*/migrations/"

[tool.pylint.MASTER]
ignore = [
  "migrations"
]
load-plugins = [
  "pylint_django"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
  "consider-using-f-string"
]