[tool.poetry]
name = "My Python Package"
description = "Example Python Package"
authors = ["Me <me@example.com>"]
version = "1.0.0"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/example/example"

[tool.poetry.dependencies]
# Python version required
python = "^3.12"

# Common libraries
dnspython = "^2.4.2"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"
tabulate = "^0.9.0"

# Common libraries for CLI scripts
click = {version = "^8.1.7", optional = true}
loguru = {version = "^0.7.2", optional = true}

# Optional requirements for development purposes
autopep8 = {version = "^2.0.4", optional = true}
black = {version = "^23.9.1", optional = true}
Cython = {version = "^3.0.2", optional = true}
devtools = {extras = ["pygments"], version = "^0.12.2", optional = true}
flake8 = {version = "^7.0.0", optional = true}
ipython = {version = "^8.15.0", optional = true}
Markdown = {version = "^3.4.4", optional = true}
pipenv = {version = "^2023.10.3", optional = true}
pycodestyle = {version = "^2.11.0", optional = true}
Pygments = {version = "^2.16.1", optional = true}
pylint = {version = "^3.0.3", optional = true}
rich = {version = "^13.6.0", optional = true}
ruff = {version = "^0.1.11", optional = true}

# Optional requirements for type checking
pyre-check = {version = "^0.9.18", optional = true}
pylint-pydantic = {version = "^0.3.2", optional = true}
mypy = {version = "^1.5.1", optional = true}
types-pyyaml = {version = "^6.0.12.12", optional = true}
types-tabulate = {version = "^0.9.0.3", optional = true}

# For Jupyter
ipykernel = {version = "^6.28.0", optional = true}
pandas = { version = "^2.1.4", optional = true, markers = "python_version >= '3.8'"}

[tool.poetry.dev-dependencies]
colorama = "^0.4.6"
ipy = "^1.01"
pytest = "^7.4.4"
pytest-html = "^4.1.1"
semgrep = "^1.56.0"

[tool.poetry.extras]

# Install extras when using CLI scripts
cli = [
  "click",
  "loguru",
]

# Jupyter notebook support for VS Code
jupyter = [
  "ipykernel",
  "pandas",
]

# Formatting and linting tools
formatting = [
  "autopep8",
  "black",
  "flake8",
  "pycodestyle",
  "pylint",
]

# General tools to install in VS Code container
vscode = [
  "Cython",
  "devtools",
  "ipython",
  "Markdown",
  "pipenv",
  "Pygments",
  "rich",
]

# Typing tools
typing = [
  "mypy",
  "pyre-check",
  "pylint-pydantic",
  "types-pyyaml",
  "types-tabulate",
]

[tool.poetry.scripts]

# To define a CLI script, uncomment the following line
#example = 'example.cli:cli'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[flake8]
# Raise default maximum line length
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
extension-pkg-whitelist = "pydantic"